Fix the issue that the navigation bar covers the main body of the content

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -49,6 +49,11 @@ body {
     font-size: 20px;
 }
 
+.layui-tab-content {
+    padding: 10px;
+    margin-top: 40px;
+}
+
 form {
     font-size: 14px;
 }
